--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,16 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'androidx.test:runner:1.2.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+//    implementation 'com.google.android.libraries.places:places:2.0.0'
 
     // https://github.com/square/retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
@@ -37,6 +43,14 @@ dependencies {
     // https://github.com/square/retrofit/tree/master/retrofit-converters/gson
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
+//    def camerax_version = "1.0.0-alpha01"
+//    implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
+//    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+//    def camerax_version = "1.0.0-alpha01"
+//    noinspection GradleDependency
+//    implementation "androidx.camera:camera-camera2:${camerax_version}"
+
     //glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
@@ -45,4 +59,10 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-android:1.23.0' exclude module: 'httpclient'
     implementation 'com.google.http-client:google-http-client-gson:1.23.0' exclude module: 'httpclient'
     implementation 'com.google.apis:google-api-services-vision:v1-rev369-1.23.0'
+//    implementation 'com.google.cloud:google-cloud-vision:1.75.0'
+
+
+    configurations {
+        all*.exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
 }
