티맵추가 구글맵 삭제 티맵 그거 자르 추가하는거 알져 네 그거 하세여

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".src.Map2Activity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDgP0N1hW-lUGnFepCF50-UsTZlwkjUorQ" />
 
-        <activity android:name=".src.MapActivity"></activity>
         <activity android:name=".src.InsuActivity" />
         <activity android:name=".src.VideoActivity" />
-
         <activity
             android:name=".src.SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
@@ -51,6 +50,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
 </manifest>
