회원가입, 로그인

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".src.signup.SignUpActivity"></activity>
+        <activity android:name=".src.login.LogInActivity"></activity>
+        <activity android:name=".src.signup.SignUpActivity" />
         <activity android:name=".src.ride.RideActivity" />
         <activity android:name=".src.map.Map2Activity" />
-
         <activity android:name=".src.InsuActivity" />
         <activity android:name=".src.VideoActivity" />
         <activity
