--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,7 @@ dependencies {
     implementation 'com.klaytn.caver:core:1.0.1-android'
     implementation "ch.qos.logback:logback-classic:1.2.3"
 
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+
+
 }
